# HuaWeiPOC

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/netvirta/verifyt/huaweipoc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ModB.om  ModC.om  config.json
app/src/main/assets/material/: black_smith.cgmat  skybox.cgmat
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/AIFaceMod/: AIFaceMod.h  CharacterInterface.h
app/src/main/cpp/include/CGRenderingFramework/Application/: BaseApplication.h  CGKitHeaders.h  TimerManager.h
app/src/main/cpp/include/CGRenderingFramework/Application/Event/: InputEvent.h  KeyInputEvent.h  MouseInputEvent.h  TouchInputEvent.h
app/src/main/cpp/include/CGRenderingFramework/Core/: Global.h  Macro.h  MemoryLeak.h  STDHeaders.h  Singleton.h  Types.h
app/src/main/cpp/include/CGRenderingFramework/Log/: Log.h  LogCommon.h
app/src/main/cpp/include/CGRenderingFramework/Math/: AABB.h  Color.h  Math.h  Matrix4.h  Plane.h  Quaternion.h  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
app/src/main/cpp/include/CGRenderingFramework/PluginManager/: IPlugin.h  PluginManager.h
app/src/main/cpp/include/CGRenderingFramework/Rendering/: MaterialInstance.h  PostProcessStage.h  RenderCommon.h  RenderPassCreateInfo.h  RenderStage.h  RenderingPath.h  SamplerCreateInfo.h  ScreenQuad.h  VertexAttribute.h  Viewport.h
app/src/main/cpp/include/CGRenderingFramework/Rendering/FrameGraph/: DirectedAcyclicGraph.h  EdgeFG.h  FGCommon.h  FGHandle.h  FGRenderPass.h  FGTexture.h  FrameGraph.h  NodeFG.h  PassExecuter.h  PassNode.h  ResourceAllocator.h  ResourceEdge.h  ResourceNode.h  VirtualResource.h  VirtualResourceBase.h
app/src/main/cpp/include/CGRenderingFramework/Rendering/Graphics/: BufferMemoryBarrier.h  CommandBuffer.h  CommandBufferCreateInfo.h  DescriptorSet.h  DescriptorSetLayout.h  FrameBuffer.h  GraphicsRenderer.h  Pipeline.h  PipelineCreateInfo.h  PipelineLayout.h  Queue.h  QueueCreateInfo.h  RenderPass.h  RenderTarget.h  RenderTargetCreateInfo.h  Sampler.h  Shader.h  ShaderStage.h  ShaderStageCreateInfo.h  SwapChain.h  Texture.h  TextureMemoryBarrier.h  TextureViewCreateInfo.h
app/src/main/cpp/include/CGRenderingFramework/Rendering/Graphics/Buffer/: Buffer.h  DynamicBuffer.h  UniformBuffer.h
app/src/main/cpp/include/CGRenderingFramework/Rendering/Model/: Mesh.h  Model.h  SubMesh.h
app/src/main/cpp/include/CGRenderingFramework/Resource/: IResource.h  RefCount.h  ResourceLoadInfo.h  ResourceManager.h
app/src/main/cpp/include/CGRenderingFramework/Scene/: IComponent.h  SceneManager.h  SceneObject.h  ShadowParams.h
app/src/main/cpp/include/CGRenderingFramework/Scene/Component/: AnimationComponent.h  Camera.h  CameraFrameGraph.h  Light.h  MeshRenderer.h  Renderable.h  Transform.h
app/src/main/cpp/include/CGRenderingFramework/Tween/: TweenManager.h
app/src/main/cpp/include/CGRenderingFramework/Utils/: DynamicArray.h  Param.h
app/src/main/cpp/include/CGRenderingFramework/Utils/MemoryAllocator/: MemoryAllocator.h
app/src/main/cpp/include/MainApplication/: MainApplication.h
app/src/main/cpp/source/: Main.cpp  MainApplication.cpp
app/src/main/java/com/netvirta/verifyt/huaweipoc/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/netvirta/verifyt/huaweipoc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
